<resources>
    <string name="app_name">Jumanji</string>
    <string name="app_title">Jumanji</string>
    <string name="app_subtitle">Quiz game</string>
    <string name="tools_jumangi_quote">A game for those who seek to find a way to leave their world behind</string>
    <string name="start_button">Start</string>
    <string-array name="jumangi_quote">
        <item>A</item>
        <item>game</item>
        <item>for</item>
        <item>those</item>
        <item>who</item>
        <item>seek</item>
        <item>to</item>
        <item>find</item>
        <item>a</item>
        <item>way</item>
        <item>to</item>
        <item>leave</item>
        <item>their</item>
        <item>world</item>
        <item>behind</item>
    </string-array>
    <string name="score">Score</string>
    <string name="stage_1">Stage 1</string>
    <string name="stage_2">Stage 2</string>
    <string name="stage_3">Stage 3</string>
    <string name="stage_4">Stage 4</string>
    <string name="quit_game">Are you sure that you want to exit game?</string>
    <string name="shelly">Professor Sheldon \"Shelly\" Oberon</string>
    <string name="shelly_strengths">strengths:\n\ncartography\narcheology\npaleontology</string>
    <string name="shelly_weakness">weakness:\n\nendurance</string>
    <string name="shelly_history">Jumanji is a dangerous place, be careful. You are a cartographer.
        And you should find a key that opens a door to your home.
    </string>
    <string name="ruby">Ruby Roundhouse</string>
    <string name="ruby_strengths">strengths:\n\nkarate\nt\'ai chi\naikido\ndance fighting</string>
    <string name="ruby_weakness">weakness:\n\nvenom</string>
    <string name="ruby_history">Professor \"Shelly\" found the key, it is a jaguar\'s jewel. You are a killer. Your group is
        going to the \"Jaguar\'s Eye\" mount, but enemies are coming. You should protect your group.
    </string>
    <string name="franklin">Franklin \"Mouse\" Finbar</string>
    <string name="franklin_strengths">strengths:\n\nzoology\nweapons wallet</string>
    <string name="franklin_weakness">weakness:\n\ncake\nspeed\nstrength</string>
    <string name="franklin_history">Your group found the place where is the \"Jaguar\'s Eye\". You are
        a zoologist. Your group is moving in jumanji\'s jungle. There live dangerous animals which want to eat you.
        You should recommend your group how you can survive.
    </string>
    <string name="bravestone">Dr. Smolder Bravestone</string>
    <string name="bravestone_strengths">strengths:\n\fearless\nclimbing\nspeed\nboomerang\nsmoldering intensity</string>
    <string name="bravestone_weakness">weakness:\nnone</string>
    <string name="bravestone_history">You almost finished your quest. You are archaeologist and explorer. You should return
         the jaguar\'s jewel into the \"Jaguar\'s Eye\" mount. It is your last mission.
    </string>
    <string name="btn_next">next</string>
    <string name="btn_answer_1">A</string>
    <string name="btn_answer_2">B</string>
    <string name="btn_answer_3">C</string>
    <string name="btn_answer_4">D</string>
    <string name="quit">Are you sure that you want to quit the current stage?</string>
    <string name="positive_button">OK</string>
    <string name="negative_button">Cancel</string>
    <string name="toast_score">Congratulations! Your score is: %d</string>
    <string name="toast_game_over">Game Over! Your score is: %d\nTry again!</string>
    <string-array name="question_stage_1">
        <item>What is the capital city of the U.S. state of Hawaii?</item>
        <item>What is the tallest mountain in Africa?</item>
        <item>What kind of tree do acorns grow on?</item>
        <item>The Dingo is a free range dog found mainly in which country?</item>
        <item>In what mountain range is Mount Everest located?</item>
        <item>Choose what is not a lake</item>
        <item>What is a dinosaur?</item>
        <item>What is not exist?</item>
        <item>What island does the Statue of Liberty stand on?</item>
        <item>What is earth\'s largest ocean by surface size?</item>
    </string-array>
    <string-array name="answer_stage1_question_1">
        <item>Honolulu</item>
        <item>Kailua</item>
        <item>Kapolei</item>
        <item>Kaneohe</item>
        <item>A</item> 
    </string-array>
    <string-array name="answer_stage1_question_2">
        <item>Mount Stanley</item>
        <item>Mount Meru</item>
        <item>Mount Kilimanjaro</item>
        <item>Mount Kenya</item>
        <item>C</item> 
    </string-array>
    <string-array name="answer_stage1_question_3">
        <item>Pine</item>
        <item>Oak</item>
        <item>Aspen</item>
        <item>Birch</item>
        <item>B</item> 
    </string-array>
    <string-array name="answer_stage1_question_4">
        <item>Brazil</item>
        <item>Austria</item>
        <item>Africa</item>
        <item>Australia</item>
        <item>D</item> 
    </string-array>
    <string-array name="answer_stage1_question_5">
        <item>Alps</item>
        <item>Himalayas</item>
        <item>Andes</item>
        <item>Rocky Mountains</item>
        <item>B</item> 
    </string-array>
    <string-array name="answer_stage1_question_6">
        <item>Nile</item>
        <item>Baikal</item>
        <item>Ganges</item>
        <item>Neagh</item>
        <item>AC</item> 
    </string-array>
    <string-array name="answer_stage1_question_7">
        <item>Godzilla</item>
        <item>T-Rex</item>
        <item>King Kong</item>
        <item>Raptor</item>
        <item>BD</item> 
    </string-array>
    <string-array name="answer_stage1_question_8">
        <item>Mordor</item>
        <item>Honduras</item>
        <item>Aruba</item>
        <item>Alagezia</item>
        <item>AD</item> 
    </string-array>
    <string-array name="answer_stage1_question_9">
        <item>Justice Island</item>
        <item>Liberty Island</item>
        <item>Honesty Island</item>
        <item>Truth Island</item>
        <item>B</item> 
    </string-array>
    <string-array name="answer_stage1_question_10">
        <item>Atlantic</item>
        <item>Indian</item>
        <item>Pacific</item>
        <item>Arctic</item>
        <item>Pacific</item> 
    </string-array>
    <string-array name="question_stage_2">
        <item>What is the original style Bruce Lee learned?</item>
        <item>The samurai code of honor is known as?</item>
        <item>What is the style Bruce Lee invented?</item>
        <item>What was the name of Bruce Lee\'s teacher?</item>
        <item>A Samurai sword set includes three swords. What is the name of the largest one?</item>
        <item>Choose martial arts</item>
        <item>Who of these are a martial arts actor?</item>
        <item>What of these are a martial movie?</item>
        <item>In Judo its called Dojo. What is the place where practicing Kung fu is called?</item>
        <item>What martial art is a traditional sword martial art?</item>
    </string-array>
    <string name="asd">A Samurai sword set includes three swords. What is the name of the largest one?</string>
    <string-array name="answer_stage2_question_1">
        <item>Akido</item>
        <item>Wing Chun</item>
        <item>American Kenpo</item>
        <item>Judo</item>
        <item>B</item> 
    </string-array>
    <string-array name="answer_stage2_question_2">
        <item>Bushido</item>
        <item>Kokido</item>
        <item>Chendo</item>
        <item>Bodido</item>
        <item>A</item> 
    </string-array>
    <string-array name="answer_stage2_question_3">
        <item>Tatsu do</item>
        <item>Jeet kune do</item>
        <item>Wing chun</item>
        <item>Book sol wan</item>
        <item>B</item> 
    </string-array>
    <string-array name="answer_stage2_question_4">
        <item>Yim Wing Chun</item>
        <item>Takuan</item>
        <item>Bow Sim Mark</item>
        <item>Yip Man</item>
        <item>D</item> 
    </string-array>
    <string-array name="answer_stage2_question_5">
        <item>Wakazashi</item>
        <item>Shirasaya</item>
        <item>Tanto</item>
        <item>Katana</item>
        <item>D</item> 
    </string-array>
    <string-array name="answer_stage2_question_6">
        <item>WWE</item>
        <item>Aikido</item>
        <item>Judo</item>
        <item>Cagefighting</item>
        <item>BC</item> 
    </string-array>
    <string-array name="answer_stage2_question_7">
        <item>Dolph Lundgren</item>
        <item>Tom Cruise</item>
        <item>Matt Damon</item>
        <item>Jackie Chan</item>
        <item>AD</item> 
    </string-array>
    <string-array name="answer_stage2_question_8">
        <item>The Raid</item>
        <item>Enter the Dragon</item>
        <item>The Godfather</item>
        <item>The Wizard of Oz</item>
        <item>AB</item> 
    </string-array>
    <string-array name="answer_stage2_question_9">
        <item>Gym</item>
        <item>Kwoon</item>
        <item>School</item>
        <item>Ring</item>
        <item>B</item> 
    </string-array>
    <string-array name="answer_stage2_question_10">
        <item>Headong kumdo</item>
        <item>Aikido</item>
        <item>Tae kwon do</item>
        <item>Judo</item>
        <item>Headong kumdo</item> 
    </string-array>
    <string-array name="question_stage_3">
        <item>What is the fastest land animal?</item>
        <item>What is the tallest mammal?</item>
        <item>What is the smallest monkey in the world?</item>
        <item>What tiny, colorful bird flaps its wings at over 500 beats per minute?</item>
        <item>What animal lives on mountainsides and uses its horns for battle?</item>
        <item>What of these are a dog\'s breed?</item>
        <item>What of these are not a predator?</item>
        <item>What of these are not a fish?</item>
        <item>Which is the preferred habitat of the red squirrel?</item>
        <item>What is considered to be the largest shark?</item>
    </string-array>
    <string-array name="answer_stage3_question_1">
        <item>Elephant</item>
        <item>Lion</item>
        <item>Beer</item>
        <item>Cheetah</item>
        <item>D</item> 
    </string-array>
    <string-array name="answer_stage3_question_2">
        <item>Elephant</item>
        <item>Giraffe</item>
        <item>Horse</item>
        <item>Brown bear</item>
        <item>B</item> 
    </string-array>
    <string-array name="answer_stage3_question_3">
        <item>Capuchin monkey</item>
        <item>Orangutang</item>
        <item>Pygmy marmoset</item>
        <item>Lemur</item>
        <item>C</item> 
    </string-array>
    <string-array name="answer_stage3_question_4">
        <item>Hummingbird</item>
        <item>Macaw</item>
        <item>Finch</item>
        <item>Cockatiel</item>
        <item>A</item> 
    </string-array>
    <string-array name="answer_stage3_question_5">
        <item>Antelope</item>
        <item>Moose</item>
        <item>Mountain goat</item>
        <item>Elk</item>
        <item>C</item> 
    </string-array>
    <string-array name="answer_stage3_question_6">
        <item>Bulldog</item>
        <item>Bengal dog</item>
        <item>Dobermann</item>
        <item>Persian dog</item>
        <item>AC</item> 
    </string-array>
    <string-array name="answer_stage3_question_7">
        <item>Wolf</item>
        <item>Pig</item>
        <item>Bear</item>
        <item>Mouse</item>
        <item>BD</item> 
    </string-array>
    <string-array name="answer_stage3_question_8">
        <item>Dolphin</item>
        <item>Goldfish</item>
        <item>Carp</item>
        <item>Whale</item>
        <item>AD</item> 
    </string-array>
    <string-array name="answer_stage3_question_9">
        <item>Forest</item>
        <item>Marsh</item>
        <item>Midtown</item>
        <item>Heather</item>
        <item>A</item> 
    </string-array>
</resources>