<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_launcher"
    tools:context="com.valeriipopov.jumanjiquiz.LauncherActivity">

    <TextView
        android:id="@+id/app_title"
        style="@style/TitleText"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"/>

    <TextView
        android:id="@+id/app_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_title"
        android:text="@string/app_subtitle"
        style="@style/SubTitleText"
        android:gravity="center"/>

    <TextView
        android:id="@+id/quote"
        android:layout_below="@id/app_subtitle"
        android:layout_above="@id/start_button"
        style="@style/TextJumanjiQuote"
        tools:text="@string/tools_jumangi_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:background="@android:color/transparent"
        style="@style/TextJumanji"
        android:textColor="@color/colorTextJumanjiStartButton"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
